
2004-01-16	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Silly "ent" vs "enterprise".

2004-01-07	Joel Becker <joel.becker@oracle.com>

	* *: Seperate out Open code.

2004-01-05	Joel Becker <joel.becker@oracle.com>

	* include/asmerror.h: Dual GPL/BSD license.
	* include/linux/asmdisk.h: Dual GPL/BSD license.
	* include/linux/asmabi.h: Dual GPL/BSD license.
	* include/linux/asmmanager.h: Dual GPL/BSD license.
	* include/linux/asmcompat32.h: Dual GPL/BSD license.
	* COPYING.GPL: Moved COPYING to COPYING.GPL.
	* COPYING.LGPL: Added.

2004-01-05	Joel Becker <joel.becker@oracle.com>

	* *.[ch]: GPL and LGPL copyright headers.
	* tools/asmscan.c: Some execution cleanups.
	* vendor/redhat/oracleasm.init.in: Fix createdisk and deletedisk
		and don't symlink against a missing module.
	* vendor/unitedlinux/*.spec.in: Add depmod.
	* vendor/unitedlinux/oracleasm.init.in: Fix createdisk, symlink
		against MODPATH.
	* vendor/common/oracleasm.init.functions: Fix /dev/oracleasm/iid
		permissions.

2003-12-23	Joel Becker <joel.becker@oracle.com>

	* configure.in: Bump to 0.10.1.
	* vendor/redhat/Makefile: Add oracleasm-userspace.spec.in to
		DIST_FILES.

2003-12-23	Joel Becker <joel.becker@oracle.com>

	* Tagging 0.10.0.

2003-12-23	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add documents subdir.
	* documents/Makefile: Added.
	* documents/asm-install.txt: Fix a couple names.
	* include/Makefile: osmlib.h -> asmlib.h.
	* include/linux/asmabi.h: osmlib.h -> asmlib.h.
	* include/linux/asmcompat32.h: osmlib.h -> asmlib.h.
	* include/linux/asmkernel.h: osmlib.h -> asmlib.h.
	* vendor/common/oracleasm.init.functions: Move to asmscan.
	* vendor/redhat/oracleasm-userspace.spec.in: Add asmscan.
	* vendor/redhat/oracleasm-2.4.9-e.spec.in: Add asmscan.
	* vendor/redhat/oracleasm-2.4.21-EL.spec.in: Add asmscan.
	* vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec.in: Add
		asmscan.
	* vendor/unitedlinux/oracleasm-2.4.19-4GB-SMP-304.spec.in: Add
		asmscan.