@@ -1,4 +1,8 @@
 
+2004-01-21	Joel Becker <joel.becker@oracle.com>
+
+	* include/linux/asmmanager.h: Add asm_disk_name().
+
 2004-01-16	Joel Becker <joel.becker@oracle.com>
 
 	* kernel/Makefile: Silly "ent" vs "enterprise".
